# pysib

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  review.md  setup.py
.github/workflows/: build-wheels.yml  docs.yml
artigo/: accepted-packages.md  main.aux  main.bbl  main.blg  main.out  references.bib
docs/: CNAME  basic-concepts.md  changelog.md  choosing-an-estimator.md  examples.md  index.md  installation.md  model-structures.md  prediction-simulation.md  quickstart.md  robots.txt
docs/api/: estimators.md  prediction-simulation.md  utilities.md
docs/manual/: Makefile  main.tex
docs/manual/api/: armax_filtered.tex  arx.tex  bj_filtered.tex  correlation.tex  oe.tex
docs/paper/: oe16_benchmark.py
docs/paper-ifac-journal/: Makefile  cover-letter.md  cover-letter.tex  highlights.txt  main.tex  references.bib  submission-checklist.md  submission-status.md  title-page.tex
docs/paper-ifac-journal/experiments/: filtered_continuation_oe.py  filtered_continuation_oe_plot.py  filtered_continuation_oe_results.md  robustness_noisy_data.npz  robustness_noisy_data_results.md
docs/paper-sysid/: Makefile  main.tex
docs/paper-sysid-2027/: Makefile  main.tex  publication-flow.md  references.bib  review.md
docs/paper-sysid-2027/experiments/: filtered_continuation_oe.npz  robustness_noisy_data.npz  robustness_noisy_data.py  robustness_noisy_data_plot.py  robustness_noisy_data_results.md
docs/paper-sysid/ifacconf_latex/: README.md  (+1 more)
docs/paper-toms/: Makefile  main.tex
docs/release/: README.md
examples/: example_armax.py  example_armax_filtered.py  example_arx.py  example_bj.py  example_bj_filtered.py  example_correlation.py  example_iv.py  example_monte_carlo.py  example_monte_carlo_filtered_motor.py  example_monte_carlo_filtered_motor_plot.py  example_monte_carlo_filtered_plot.py  example_monte_carlo_filtered_simple.py  example_oe.py  example_oe_filtered.py  example_sm.py  mc_results.npz  mc_results_motor.npz
scripts/: check-release-artifacts.sh  create-github-release-draft.sh  download-release-artifacts.sh  upload-release-pypi.sh
src/pysib/: __init__.py  armax.py  arx.py  bj.py  correlation.py  filtered.py  iv.py  oe.py  plota.py  predict.py  sm.py
tests/: test_basic.py
userManual/api/: armax.tex  armax_filtered.tex  bj.tex  iv.tex  oe_filtered.tex  plota.tex  predict.tex  simulate.tex  sm.tex
(+24 files in other folders)
