[build-system]
requires = ["setuptools>=64", "wheel", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "pysib"
version = "0.1.0"
description = "System Identification Toolbox (Slow is Better)"
license = {text = "MIT"}
authors = [{name = "Diego Eckhard", email = "diegoeck@ufrgs.br"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.4",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[tool.setuptools.packages.find]
where = ["src"]
