[build-system]
requires = ["setuptools>=64", "wheel", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "pysib"
version = "0.2.0"
description = "System Identification Toolbox (Slow is Better)"
readme = "README.md"
license = "MIT"
authors = [{name = "Diego Eckhard", email = "diego@eckhard.com.br"}]
requires-python = ">=3.9"
keywords = [
    "system-identification",
    "control",
    "signal-processing",
    "arx",
    "oe",
    "armax",
    "box-jenkins",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.4",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://pysib.net/"
Documentation = "https://pysib.net/"
Source = "https://github.com/diegoeck/pysib"
Issues = "https://github.com/diegoeck/pysib/issues"

[tool.setuptools.packages.find]
where = ["src"]
